--- a/literature.yml
+++ b/literature.yml
@@ -3,11 +3,9 @@
 # Dokumentacija: https://github.com/typst/hayagriva/blob/main/docs/file-format.md
 
 knygos_pavadinimas:
-    type: Book
-    title: Gražus Knygos Pavadinimas
-    author: Autorius
-    volume: skyrius, jei neklystu
-    page-total: 123
-    date: 1601-01-24
-
+    type: web
+    title: JSoup
+    author: Jonathan Hedley and jsoup contributors
+    url: "https://jsoup.org/"
+    date: 2025
 
